--- a/SqlHelper/SLClient/MainPage.xaml
+++ b/SqlHelper/SLClient/MainPage.xaml
@@ -4,9 +4,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="400">
+    d:DesignHeight="300" d:DesignWidth="400" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk">
 
     <Grid x:Name="LayoutRoot" Background="White">
-
+        <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="12,12,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+        <sdk:DataGrid AutoGenerateColumns="True" Height="175" HorizontalAlignment="Left" Margin="12,113,0,0" Name="dataGrid1" VerticalAlignment="Top" Width="376" />
+        <TextBox AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Height="66" HorizontalAlignment="Left" Margin="12,41,0,0" Name="textBox1" VerticalAlignment="Top" Width="376" />
+        <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="93,12,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
     </Grid>
 </UserControl>
