--- a/SqlHelper/SLClient/App.xaml
+++ b/SqlHelper/SLClient/App.xaml
@@ -4,20 +4,20 @@
              >
     <Application.Resources>
         <Style TargetType="Button">
-            <Setter Property="TextElement.FontFamily" Value="SimSun" />
-            <Setter Property="TextElement.FontSize" Value="12" />
+            <Setter Property="FontFamily" Value="SimSun" />
+            <Setter Property="FontSize" Value="12" />
         </Style>
         <Style TargetType="CheckBox">
-            <Setter Property="TextElement.FontFamily" Value="SimSun" />
-            <Setter Property="TextElement.FontSize" Value="12" />
+            <Setter Property="FontFamily" Value="SimSun" />
+            <Setter Property="FontSize" Value="12" />
         </Style>
         <Style TargetType="TextBlock">
-            <Setter Property="TextElement.FontFamily" Value="SimSun" />
-            <Setter Property="TextElement.FontSize" Value="12" />
+            <Setter Property="FontFamily" Value="SimSun" />
+            <Setter Property="FontSize" Value="12" />
         </Style>
         <Style TargetType="TextBox">
-            <Setter Property="TextElement.FontFamily" Value="SimSun" />
-            <Setter Property="TextElement.FontSize" Value="12" />
+            <Setter Property="FontFamily" Value="SimSun" />
+            <Setter Property="FontSize" Value="12" />
         </Style>
     </Application.Resources>
 </Application>
